// Vitest Snapshot v1

exports[`validators > KvRecords > addKvRecords > should successfully validate 1`] = `
{
  "fwConstants": {
    "kvActionsAllowed": true,
  },
  "sharedSecret": {
    "data": [
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "url": "test.com",
  "validRecords": {
    "key": "value",
  },
}
`;

exports[`validators > KvRecords > getKvRecords > should successfully validate 1`] = `
{
  "fwConstants": {
    "kvActionsAllowed": true,
  },
  "n": 1,
  "sharedSecret": {
    "data": [
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "start": 0,
  "type": 1,
  "url": "test.com",
}
`;

exports[`validators > KvRecords > removeKvRecords > should successfully validate 1`] = `
{
  "fwConstants": {
    "kvActionsAllowed": true,
  },
  "ids": [
    1,
  ],
  "sharedSecret": {
    "data": [
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "type": 1,
  "url": "test.com",
}
`;

exports[`validators > connect > should successfully validate 1`] = `"test"`;

exports[`validators > fetchActiveWallet > should successfully validate 1`] = `
{
  "sharedSecret": {
    "data": [
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "url": "test.com",
}
`;

exports[`validators > getAddresses > should successfully validate 1`] = `
{
  "fwVersion": {
    "data": [
      0,
      12,
      0,
    ],
    "type": "Buffer",
  },
  "sharedSecret": {
    "data": [
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "url": "asdf",
  "wallet": {
    "capabilities": 1,
    "external": true,
    "name": {
      "data": [
        116,
        101,
        115,
        116,
      ],
      "type": "Buffer",
    },
    "uid": {
      "data": [
        116,
        101,
        115,
        116,
      ],
      "type": "Buffer",
    },
  },
}
`;

exports[`validators > sign > should successfully validate 1`] = `
{
  "fwConstants": {
    "kvActionsAllowed": true,
  },
  "sharedSecret": {
    "data": [
      116,
      101,
      115,
      116,
    ],
    "type": "Buffer",
  },
  "url": "test.com",
  "wallet": "wallet",
}
`;
